[package]
name = "hullrot"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

[dependencies]
libc = "0.2.0"
mio = "0.6.11"
openssl = "0.9.21"
byteorder = "1.1.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
opus = { git = "https://github.com/SpaceManiac/opus-rs" }
mumble-protocol = { path = "src/protocol" }
