[package]
name = "hullrot-client"
version = "0.2.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "dylib with BYOND-integrable "

[lib]
name = "hullrot"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
mio = "0.6.11"
byteorder = "1.1.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
hullrot-common = { path = "../hullrot-common" }
