[package]
name = "hullrot-client"
version = "0.2.1"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "dylib for BYOND to connect to Hullrot control channel"
edition = "2015"

[lib]
name = "hullrot"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
byteorder = "1.1.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
hullrot-common = { path = "../hullrot-common" }
