[package]
name = "hullrot-server"
version = "0.2.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "Immersive roleplaying Mumble server"

[[bin]]
name = "hullrot"
path = "main.rs"

[dependencies]
libc = "0.2.0"
mio = "0.6.11"
openssl = "0.10.11"
byteorder = "1.1.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
toml = "0.5.3"
opus = "0.2.1"
mumble-protocol = { path = "../mumble-protocol" }
hullrot-common = { path = "../hullrot-common" }
